# Folder_Structure_HASH_Media_Analysis

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  COPIER_TEMPLATE_PLAN.md  COPIER_TEMPLATE_UPDATE_SUMMARY.md  COPY_HASH_VERIFY_IMPLEMENTATION_SUMMARY.md  COPY_HASH_VERIFY_MODULARIZATION_PLAN.md  FILENAME_PARSER_INTEGRATION_HANDOFF.md  FOLDER_STRUCTURE_ANALYSIS.md  HASHING_IMPLEMENTATION_ANALYSIS.md  PHASE_2_COMPLETE.md  PROGRESS_UPDATE.md  RE-ENABLE_MCP_SERVERS_INSTRUCTIONS.md  README.md  SESSION_COMPLETE_STATUS.md  VERIFY_HASHES_OPTIMIZATION_PLAN.md  conda_packages.txt  custom_mode_instructions.html  environment.yml  main.py  main_original.py  requirements.txt  requirements_full.txt  sample_dev_data.json  sample_dev_data2.json  sample_no_business.json  test_batch_integration.py  test_batch_success.py  test_copy_hash_verify_imports.py  test_copy_verify_resource_tracking.py  test_documents_placement_fix.py  test_error_foundation.py  test_field_mapping.py  test_known_file.py  test_level_based_documents.py  test_media_analysis_resource_tracking.py  test_metrics_flow.py  test_pts_direct.py  test_pts_extraction.py  test_storage_detection_tiers.py  (+6 more)
.claude/: settings.local.json
Documents/: APP_CLEANUP.md  After Phase 3 Midway in Backward Compatability Removal Handoff.md  BACKWARD_COMPATIBILITY_REMOVAL_COMPLETE.md  CODE_REVIEW.md  CODE_REVIEW_REFACTOR_PHASE_1.md  CODE_REVIEW_REFACTOR_PHASE_2.md  COMPREHENSIVE_CODE_REVIEW.md  CUSTOM_TEMPLATE_REMOVAL_PLAN.md  (+7 more)
vehicle_tracking/tauri-map/src-tauri/: Cargo.toml  tauri.conf.json
vehicle_tracking/tauri-map/src-tauri/src/: main.rs
(+593 files in other folders)
